Front: Improve state management for current use with observables

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -15,7 +15,7 @@
       <div *ngIf="this.authentication.isAuthenticated(); then logoutTemplate"></div>
       <ng-template #logoutTemplate>
         <a href="#" class="nav-item nav-link">User is: {{currentUser}}</a>
-        <a  class="nav-item nav-link" (click)="logout()">
+        <a class="nav-item nav-link logout-link" (click)="logout()">
           Logout
           <span class="sr-only">(current)</span>
         </a>
