Frontend: Add profile and help

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -24,7 +24,10 @@
             <mat-card-actions>
               <div class="row">
                 <div class="col-sm-5 offset-3">
-                  <button mat-raised-button color="primary">Login</button>
+                  <button mat-raised-button color="primary">
+                    <i class="fa fa-sign-in" aria-hidden="true"></i>
+                     Login
+                  </button>
                 </div>
               </div>
             </mat-card-actions>
