--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -6,7 +6,7 @@
   <div class="col-sm-3"><!-- Image Column -->
 
     <div class="text-center">
-      <img src="assets/avatars/pug.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
+      <img src="assets/avatars/{{profile.photo || 'default.jpg'}}" class="avatar img-circle img-thumbnail" alt="avatar">
     </div>
     <br>
 
