Dashboard additions, profile form reactive load

--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -16,7 +16,7 @@
 
     <div class="tab-pane active" id="home">
       <hr>
-      <form class="form" [formGroup]="profileForm" (ngSubmit)="onSubmit(profileForm.value)">
+      <form class="form" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
 
         <div class="form-row">
           <div class="form-group col-sm-6">
