--- a/frontend/src/app/components/shared/navigation/navigation.component.html
+++ b/frontend/src/app/components/shared/navigation/navigation.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand " routerLink="/dashboard">ConChris Web Banking</a>
+        <a class="navbar-brand " routerLink="/dashboard">
+          <img width="50" alt="ConChris Bank" src="assets/logo.png"/> ConChris Bank
+        </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup"
           aria-expanded="false" aria-label="Toggle navigation">
