UI Improvements, add dashboard menu

--- a/frontend/src/app/components/dashboard/dashboard.component.scss
+++ b/frontend/src/app/components/dashboard/dashboard.component.scss
@@ -10,6 +10,14 @@
   margin: 20px;
 }
 
+span.menu-item {
+  display: block;
+}
+
+.dashboard-menu-boxes .row {
+  margin-bottom: 15px;
+}
+
 .dashboard-ripple-container {
   font-size: larger;
   cursor: pointer;
