--- a/frontend/src/app/components/accounts-list/accounts-list.component.html
+++ b/frontend/src/app/components/accounts-list/accounts-list.component.html
@@ -1,19 +1,21 @@
 <div class="accounts-list">
   <h3>Accounts</h3>
+  <div class="row">
 
-  <div class="account-details" *ngFor="let account of accountList">
-    <mat-card class="account-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>{{account.description}}</mat-card-title>
-        <mat-card-subtitle>{{account.iban}}</mat-card-subtitle>
-      </mat-card-header>
+    <div class="col-sm-6 account-details" *ngFor="let account of accountList">
+      <mat-card class="account-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>{{account.description}}</mat-card-title>
+          <mat-card-subtitle>{{account.iban}}</mat-card-subtitle>
+        </mat-card-header>
 
-      <mat-card-content>
-        <h4 class="text-center">Balance: {{account.balance}}</h4>
-      </mat-card-content>
-      <mat-card-actions>
-      </mat-card-actions>
-    </mat-card>
+        <mat-card-content>
+          <h4 class="text-center">Balance: {{account.balance | currency:'EUR':'symbol'}}</h4>
+        </mat-card-content>
+        <mat-card-actions>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </div>
 </div>
