Update dashboard and payment component links and layout

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col">
         <a class="btn btn-lg btn-primary" href="" routerLink="/payments" routerLinkActive="active"
-           style="color: white; display: block;" href="#">
+           style="color: white; display: block;" >
           <svg style="fill: white;" height="25pt" viewBox="-15 0 463 463.152" width="25pt"
                xmlns="http://www.w3.org/2000/svg">
             <path
