--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -11,8 +11,12 @@ footer {
   padding: 15px;
 }
 
+.btn-primary {
+  background-color: #3f51b5 !important;
+}
+
 .mat-form-field-infix {
-  width: 400px !important;
+  width: 430px !important;
 }
 .account-card {
   max-width: 400px;
