--- a/frontend/src/app/components/payments/payments.component.html
+++ b/frontend/src/app/components/payments/payments.component.html
@@ -9,6 +9,7 @@
         </div>
         <div class="panel-body">
           <form class="form" role="form" [formGroup]="transferForm" (ngSubmit)="onSubmit()">
+            <input type="text" class="form-control" id="email" formControlName="email" hidden />
             <div class="form-group">
               <div class="input-group">
                 <mat-form-field>
